SET(MODULE_NAME "Core")
SET(MODULE_DIRECTORY "Core")

set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

# Including source code
set(PROJECT_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/Core/include)
set(PROJECT_SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/Core/src)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/bin)

file(GLOB CORE_SOURCE_FILES_TOP "${PROJECT_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE CORE_SOURCE_FILES_NESTED ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/*.cpp)
set(CORE_SOURCE_FILES ${CORE_SOURCE_FILES_TOP} ${CORE_SOURCE_FILES_NESTED})

include_directories("${PROJECT_INCLUDE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}")

add_library(Core STATIC ${CORE_SOURCE_FILES})
target_include_directories(Core PUBLIC ${PROJECT_INCLUDE_DIR})
target_link_libraries(Core)
